--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/g2": "^4.1.20",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "css-loader": "^5.2.6",
+    "dayjs": "^1.10.6",
     "element-ui": "^2.15.2",
+    "insert-css": "^2.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
     "vue": "^2.6.11",
