--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@antv/g2": "^4.1.20",
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "css-loader": "^5.2.6",
@@ -17,6 +18,7 @@
     "insert-css": "^2.0.0",
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
+    "postcss-pxtorem": "^5.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -44,6 +46,18 @@
       "parser": "babel-eslint"
     },
     "rules": {}
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {},
+      "postcss-pxtorem": {
+        "rootValue": 192,
+        "remPrecision": 8,
+        "propList": [
+          "*"
+        ]
+      }
+    }
   },
   "browserslist": [
     "> 1%",
