--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "less": "^4.1.1",
     "less-loader": "^7.0.0",
     "postcss-pxtorem": "^5.1.1",
+    "reconnecting-websocket": "^4.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -52,7 +53,10 @@
       "postcss-pxtorem": {
         "rootValue": 192,
         "remPrecision": 8,
-        "selectorBlackList": ["message-","cp-icon-"],
+        "selectorBlackList": [
+          "message-",
+          "cp-icon-"
+        ],
         "propList": [
           "*",
           "!fontSize"
