--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_REFIX='http://10.10.220.141/sail-analysis-server'
-VUE_APP_FILE_REFIX='http://10.10.220.141:21210'
+VUE_APP_REFIX='http://172.126.172.61/sail-analysis-server'
+VUE_APP_FILE_REFIX='http://172.126.172.61:21210'
